// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Comprehensive Azure compliance and security auditing capabilities including best practices assessment,
Key Vault expiration monitoring, and resource configuration validation.
USE FOR: compliance scan, security audit, azqr, Azure best practices, Key Vault expiration check,
compliance assessment, resource review, configuration validation, expired certificates, expiring secrets,
orphaned resources, policy compliance, security posture evaluation.
DO NOT USE FOR: deploying resources (use azure-deploy), cost analysis alone (use azure-cost-optimization),
active security hardening (use azure-security-hardening), general Azure Advisor queries (use azure-observability).
",
  "extractedKeywords": [
    "active",
    "advisor",
    "alone",
    "analysis",
    "assessment",
    "audit",
    "auditing",
    "authentication",
    "azqr",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-observability",
    "azure-security-hardening",
    "best",
    "capabilities",
    "certificates",
    "check",
    "compliance",
    "comprehensive",
    "configuration",
    "cost",
    "deploying",
    "evaluation",
    "expiration",
    "expired",
    "expiring",
    "general",
    "hardening",
    "including",
    "key vault",
    "keyvault",
    "mcp",
    "monitor",
    "monitoring",
    "orphaned",
    "policy",
    "posture",
    "practices",
    "queries",
    "resource",
    "resources",
    "review",
    "scan",
    "secrets",
    "security",
    "validation",
    "vault",
  ],
  "name": "azure-compliance",
}
`;

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "active",
  "advisor",
  "alone",
  "analysis",
  "assessment",
  "audit",
  "auditing",
  "authentication",
  "azqr",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-observability",
  "azure-security-hardening",
  "best",
  "capabilities",
  "certificates",
  "check",
  "compliance",
  "comprehensive",
  "configuration",
  "cost",
  "deploying",
  "evaluation",
  "expiration",
  "expired",
  "expiring",
  "general",
  "hardening",
  "including",
  "key vault",
  "keyvault",
  "mcp",
  "monitor",
  "monitoring",
  "orphaned",
  "policy",
  "posture",
  "practices",
  "queries",
  "resource",
  "resources",
  "review",
  "scan",
  "secrets",
  "security",
  "validation",
  "vault",
]
`;
